[package]
name = "exodus"
version = "0.2.0"
authors = [ "Warre Pessers" ]
edition = "2021"
description = "CLI tool for migrating AWS API Keys between accounts / regions"
readme = "README.md"
repository = "https://github.com/wpessers/exodus"
license = "MIT"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.0", features = ["hardcoded-credentials"] }
aws-sdk-apigateway = "1.22.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rpassword = "7.3"
regex = "1.10.4"
